orchestrator/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    # Below annotations will be patched per environment
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/ssl-policy: ""
    alb.ingress.kubernetes.io/group.name: ""
    alb.ingress.kubernetes.io/subnets: ""
    alb.ingress.kubernetes.io/tags: ""
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: ""
    alb.ingress.kubernetes.io/healthcheck-path: ""
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: ""
spec:
  ingressClassName: alb
  rules:
  - host: orchestrator-api.example.com  # Will be overridden per environment
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orchestrator
            port:
              number: 80
